--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>tercuman_bulmaca</title>
+  <title>Tercuman Bul</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
@@ -54,6 +54,22 @@
         }
       });
     });
+  </script>
+  <script>
+       if ('serviceWorker' in navigator) {
+          // Service workers are supported. Use them.
+          window.addEventListener('load', function () {
+            // ADD THIS LINE
+            navigator.serviceWorker.register('/firebase-messaging-sw.js');
+
+            // Wait for registration to finish before dropping the <script> tag.
+            // Otherwise, the browser will load the script multiple times,
+            // potentially different versions.
+            var serviceWorkerUrl = 'flutter_service_worker.js?v=' + serviceWorkerVersion;
+
+            //  ...
+          });
+      }
   </script>
 </body>
 </html>
